--- a/index.html
+++ b/index.html
@@ -8,47 +8,51 @@
     <title>BSU Draft Website</title>
 </head>
 <body>
-    <div class="LEFT">
-        <div class="1">
-            <div>date of event</div>
-            <div>Name of Event</div>
+    <div class="navBar">
+        <div class="left">
+            <div>Sign In</div>
+            <div>See More...</div>
+        </div>
+        <div class="right">
+            <div>register For Event</div>
+        </div>
+    </div>
+
+    <div class="Page">
+        <div class="section header">
+            <div class="date">Mar 5</div>
+            <div class="title">BSU Draft Website</div>
             <div>Description + Event time's</div>
         </div>
-        <div class="2">
+        <div class="section">
             <div class="sideBySide">
                 <div class="leftSide">
                     <div>when and where</div>
-                    <div>Details</div>
+                    <div class="details">Details</div>
                 </div>
                 <div class="rightSide">
                     <div>Location</div>
-                    <div>Details</div>
+                    <div class="details">Details</div>
                 </div>
             </div>
         </div>
-        <div class="3">
-            <div>Payment Information</div>
-            <div>Details</div>
+        <div class="section">
+            <div class="sectionHead">Payment Information</div>
+            <div class="details">Details</div>
         </div>
-        <div class="4">
-            <div>About the Event</div>
-            <div>Details</div>
+        <div class="section">
+            <div class="sectionHead">About the Event</div>
+            <div class="details">Details</div>
         </div>
-        <div class="5">
-            <div>social Media</div>
+        <div class="section">
+            <div class="sectionHead">social Media</div>
         </div>
-        <div class="6">
+        <div class="section">
             <div>Organizers + sponcers</div>
         </div>
 
     </div>
 
-    <div class="RIGHT">
-        <div class="A">
-            <div>Sign In</div>
-            <div>Register For Event</div>
-            <div>See More...</div>
-        </div>
-    </div>
+
 </body>
 </html>
